// 1. syntax, package, option
syntax = "proto3";

option java_multiple_files = true;
option java_package = "edu.stanford.futuredata.uniserve";
option java_outer_classname = "QueryDataProto";

package querydata;

service QueryData {
    // Add a row to a DataStore server.  Return an acknowledgement.
    rpc AddRow(Row) returns (AddRowAck) {}
    rpc MakeReadQuery(ReadQuery) returns (ReadQueryResponse) {}
}

message Row {
    int32 shard = 1;
    bytes rowData = 2;
}

message AddRowAck {
    int32 returnCode = 1;
}

message ReadQuery {
    int32 shard = 1;
    bytes serializedQuery = 2;
}

message ReadQueryResponse {
    int32 returnCode = 1;
    bytes response = 2;
}